Release info
============

You can see the complete list of recent changes, bugfixes and new features
in the http://repo.or.cz/w/elinks.git[gitweb interface]. See the ChangeLog
file for details.

ELinks 0.11.7.GIT now:
----------------------

To be released as 0.11.8.

* serious Debian bug 464384: fix cast warning in alignof

ELinks 0.11.7:
--------------

Released on 2009-08-22.

* critical bug 1077: fix crash opening a ``javascript:'' link in a new
  tab
* major bug 764: remove int/long/pointer type punning in union
  option_value, especially harmful on sparc64

ELinks 0.11.6:
--------------

Released on 2009-03-21.

* critical: fix double-free crash if EOF immediately follows </MAP>
* critical bug 1053: fix crash if a download finishes after ELinks has
  closed the terminal from which the download was started
* major bug 1004: ignore locales when comparing HTML element names and
  similar strings, so e.g. ``title'' matches ``TITLE'' even in the
  Turkish locale
* minor: clicking a link with the mouse activates that link, rather
  than the one selected with move-cursor-* actions
* build bug 1047: attempt to make inline functions satisfy C99 6.7.4p3
  so that ELinks can be built on OpenSolaris

ELinks 0.11.5:
--------------

Released on 2008-09-21.

* critical bug 1027 in user SMJS: make elinks.keymaps treat null and
  "none" as equivalent actions, avoiding a segfault
* critical bug 1030: an assertion used to fail in the search dialog
  on systems that lack a usable <regex.h>
* major bug 503: various fixes in parsing and updating of elinks.conf
* bug 698: Attach controls to the intended form even if it is
  incorrectly nested in a table.  (Was broken in 0.11.4.)
* build bug 1021: fixed uninitialized variable in http_got_header
* build: don't use libgnutls-openssl, which is no longer GPLv2
  compatible in GnuTLS 2.2.0

ELinks 0.11.4:
--------------

Released on 2008-06-20.

* critical bug 755: fix crashes due to dangling pointers to struct
  form_state